hphp/test/slow/string/set-bytes-bad3.php.expectf

Fatal error: HH\set_bytes_float32_vec expects no more than 4 arguments in %s/test/slow/string/set-bytes-bad3.php on line 4
